force-app/main/default/objects/Welcome_Mat_Config__c/fields/Right_Panel_Section_1_Icon__c.field-meta.xml
<CustomField>
    <fullName>Right_Panel_Section_1_Icon__c</fullName>
    <description>Right Panel Section 1 Icon</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Right Panel Section 1 Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>