force-app/main/default/objects/Welcome_Mat_Config__c/fields/Right_Panel_Section_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Right_Panel_Section_1_Title__c</fullName>
    <description>Title of Section 1 in Right Panel</description>
    <label>Right Panel Section 1 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>