force-app/main/default/objects/Welcome_Mat_Config__c/fields/Right_Panel_Section_4_Content__c.field-meta.xml
<CustomField>
    <fullName>Right_Panel_Section_4_Content__c</fullName>
    <description>Right Panel Section 4 Content</description>
    <label>Right Panel Section 4 Content</label>
    <type>TextArea</type>
</CustomField>